04.Application-Lifecycle/exercise-application/application-resources/deployment-vulnapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: log4shell-vuln
  name: log4shell-vuln
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log4shell-vuln
  template:
    metadata:
      labels:
        app: log4shell-vuln
    spec:
      containers:
      - image: quay.io/feven/log4shell-vuln@sha256:1eeca606399f2a3ee3b94f2a35306671127166ff63002d3b6945511b780b656f
        imagePullPolicy: IfNotPresent
        name: log4shell-vuln
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
