04.Application-Lifecycle/exercise-application/application-resources/service-vulnapp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: log4shell-vuln
  name: log4shell-vuln
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: log4shell-vuln
  sessionAffinity: None
  type: ClusterIP
