04.Application-Lifecycle/exercise-application/application-resources/route-vulnapp.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: log4shell-vuln
  name: log4shell-vuln
spec:
  host: log4shell-vuln-vulnapp.apps.ocp1.redhat.hpecic.net
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: log4shell-vuln
    weight: 100
  wildcardPolicy: None
